Change getFirst() call